syntax = "proto3";

option go_package = "github.com/mixarchitecture/arch/shared/genproto/example";
option java_multiple_files = true;
option java_package = "com.example.genproto";
option java_outer_classname = "ExampleProto";

package example;

service ExampleService {
  rpc GetExample (GetExampleRequest) returns (GetExampleResponse) {}
  rpc ListExample (ListExampleRequest) returns (ListExampleResponse) {}
  rpc CreateExample (CreateExampleRequest) returns (CreateExampleResponse) {}
  rpc UpdateExample (UpdateExampleRequest) returns (UpdateExampleResponse) {}
}

message GetExampleRequest {
  string key = 1;
}

message Example {
  string key = 1;
  string value = 2;
}

message GetExampleResponse {
  Example example = 1;
}

message ListExampleRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message ListExampleResponse {
  repeated Example examples = 1;
}

message CreateExampleRequest {
  Example example = 1;
}

message CreateExampleResponse {
  Example example = 1;
}

message UpdateExampleRequest {
  Example example = 1;
}

message UpdateExampleResponse {
  Example example = 1;
}